syntax = "proto3";

enum PrimitiveType {
    BOOL = 0;
    INT3 = 1;
    INT64 = 2;
    UINT32 = 3;
    UINT64 = 4;
    SINT32 = 5;
    SINT64 = 6;
    FIXED32 = 7;
    FIXED64 = 8;
    SFIXED32 = 9;
    SFIXED64 = 10;
    STRING = 11;
    BYTES = 12;
    BIG_INTEGER = 13;
    BIG_DECIMAL = 14;
    DATETIME = 15;
    DURATION = 16;
    INTERVAL = 17;
}


message TypeRef {
    oneof info {
        PrimitiveType primitive = 1;
        uint64 complex_type = 2;
        TypeRef array = 3;
        TypeRef optional = 4;
    }
}

message ComplexType {
    uint64 namespace = 1;
    string name = 2;

    oneof info {
        Struct struct = 3;
        Enum enum = 4;
        Interface interface = 5;
    }

    message Struct {
        repeated Field fields = 3;

        message Field {
            string name = 1;
            TypeRef type = 2;
        }
    }

    message Enum {
        repeated Value values = 3;

        message Value {
            string name = 1;
            sint32 value = 2;
        }
    }

    message Interface {
        repeated uint64 implementers = 1;
    }
}
